fixed giant close button on safari

--- a/src/mint/react-common/components/LoginScreen/LoginScreen.scss
+++ b/src/mint/react-common/components/LoginScreen/LoginScreen.scss
@@ -61,6 +61,8 @@
       float: left;
       padding: 10px;
       cursor: pointer;
+      max-width: 36px;
+      max-height: 45px;
 
       svg {
         height: 100%;
